# Predeye

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
app/: CMakeLists.txt  main.cpp
cmake/: AutoVcpkg.cmake
core/: CMakeLists.txt  advisor.cpp  advisor.hpp  build_engine.cpp  build_engine.hpp  draft_advisor.cpp  draft_advisor.hpp  enemy_build.cpp  enemy_build.hpp  hero_context.cpp  hero_context.hpp  loadout_advisor.cpp  loadout_advisor.hpp  local_data.cpp  local_data.hpp  models.cpp  models.hpp  omeda_client.cpp  omeda_client.hpp  shopping_advisor.cpp  shopping_advisor.hpp
data/: counters.json  eternals.json  hero_pool.json  pl_items.json
docs/: BUILD.md  PROGRESS.md
gui/: CMakeLists.txt  async_task.hpp  main_gui.cpp
tests/: CMakeLists.txt  fixtures.hpp  test_advisors.cpp  test_auto_calibrate.cpp  test_auto_calibration.cpp  test_build_engine.cpp  test_calibration.cpp  test_capture.cpp  test_draft_reader.cpp  test_enemy_build.cpp  test_hero_context.cpp  test_icon_matcher.cpp  test_local_data.cpp  test_models.cpp  test_scoreboard_reader.cpp
tests/fixtures/: builds_steel.json  builds_the_fey.json  builds_wraith.json  heroes.json  items.json  meta_hero_stats.json
tests/fixtures/data/: counters.json  eternals.json  hero_pool.json  pl_items.json
tests/fixtures/screens/: calibration_1080p.json
tools/: CMakeLists.txt  gen_pl_items.py  icon_harness.cpp
vision/: CMakeLists.txt  auto_calibrate.cpp  auto_calibrate.hpp  auto_calibration.cpp  auto_calibration.hpp  calibration.cpp  calibration.hpp  capture.cpp  capture.hpp  capture_dxgi.cpp  capture_dxgi.hpp  draft_reader.cpp  draft_reader.hpp  hero_matcher.cpp  hero_matcher.hpp  icon_matcher.cpp  icon_matcher.hpp  scoreboard_reader.cpp  scoreboard_reader.hpp  vision_session.cpp  vision_session.hpp
